# proton

./: .bazelrc  .gitattributes  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  TODO.md  build.yaml  buildfile
.github/workflows/: ci.yml
core/src/main/java/org/realityforge/proton/: AbstractStandardProcessor.java  AnnotationsUtil.java  BUILD.bazel  DeferredElementSet.java  ElementsUtil.java  GeneratorUtil.java  IOUtil.java  JsonUtil.java  MemberChecks.java  NamesUtil.java  ProcessorException.java  ResourceUtil.java  StopWatch.java  SuperficialValidation.java  SuppressWarningsUtil.java  TypesUtil.java  package-info.java
core/src/test/java/org/realityforge/proton/: AnnotationsUtilTest.java  BUILD.bazel  DeferredElementSetTest.java  ElementsUtilTest.java  GeneratorUtilTest.java  JsonUtilTest.java  MemberChecksTest.java  NamesUtilTest.java  ProcessorExceptionTest.java  ResourceUtilTest.java  StandardProcessorTest.java  StopWatchTest.java  SuperficialValidationTest.java  SuppressWarningsUtilTest.java  TestUtil.java  TypesUtilTest.java
plans/bazel-build-migration/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml
plans/proton-format-generated-source/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml
qa/src/main/java/org/realityforge/proton/qa/: AbstractProcessorTest.java  BUILD.bazel  Compilation.java  CompileTestUtil.java  SynthesizingProcessor.java  package-info.java
qa/src/test/fixtures/: BUILD.bazel
qa/src/test/fixtures/input/com/example/: BUILD.bazel  Model.java
qa/src/test/java/org/realityforge/proton/qa/: BUILD.bazel  CompilationTest.java  GenerateType.java  ProcessorTestHarnessTest.java  TestProcessor.java
src/main/java/org/realityforge/proton/: AbstractStandardProcessor.java  AnnotationsUtil.java  ElementsUtil.java  ProcessorException.java  SuppressWarningsUtil.java
tasks/: package_for_maven_central.rake  release.rake
tools/: check.sh  java_format.sh  package_maven_central.sh  update_java_deps.sh
tools/intellij/: .managed.bazelproject
tools/java-format/: BUILD.bazel
tools/release/: BUILD.bazel  README.md  check_ready.sh  finalize_release.sh  next_version.sh  perform_release.sh  prepare_release.sh  release.bzl  upload_maven_central.sh
tools/release/org/realityforge/proton/release/: BUILD.bazel  DistBuilder.java  JarBuilder.java  JarBuilderTest.java  JavadocJarBuilder.java  ReleaseLifecycleTool.java  ReleaseLifecycleToolTest.java  package-info.java
